--- a/index.html
+++ b/index.html
@@ -15,7 +15,31 @@
     <title>Bootstrap Carousel</title>
   </head>
   <body>
-    <h1>Hello, world!</h1>
+    <!-- CAROUSELL SECION ---------------------------------------------------- -->
+    <!-- you need javascript ------------------------- -->
+    <div id="landingPageCarousel" class="carousel slide" data-ride="carousel">
+		  <div class="carousel-inner">
+			<div class="carousel-item active" id="slideOne">
+			  <!-- <img class="d-block w-100" src="..." alt="First slide"> -->
+			</div>
+			<div class="carousel-item" id="slideTwo">
+			  <!-- <img class="d-block w-100" src="..." alt="Second slide"> -->
+			</div>
+			<div class="carousel-item">
+        <video src="img/20191122_a_week_ago_1570573447418.mp4" class="embed-resposive-item w-100 img-fluid" muted loop autoplay></video>
+        <!-- <img class="d-block w-100" src="..." alt="Third slide"> -->
+			</div>
+		  </div>
+		</div>
+
+
+    <!-- <div class="carousel-item">
+      <img src="img/moby_deploy1_2.jpg" alt="...">
+      <div class="carousel-caption d-none d-md-block">
+        <h5>MOBY deployment</h5>
+        <p>...</p>
+      </div>
+    </div> -->
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
