--- a/index.html
+++ b/index.html
@@ -19,17 +19,25 @@
     <!-- you need javascript ------------------------- -->
     <div id="landingPageCarousel" class="carousel slide" data-ride="carousel">
 		  <div class="carousel-inner">
-			<div class="carousel-item active" id="slideOne">
-			  <!-- <img class="d-block w-100" src="..." alt="First slide"> -->
-			</div>
-			<div class="carousel-item" id="slideTwo">
-			  <!-- <img class="d-block w-100" src="..." alt="Second slide"> -->
-			</div>
-			<div class="carousel-item">
-        <video src="img/20191122_a_week_ago_1570573447418.mp4" class="embed-resposive-item w-100 img-fluid" muted loop autoplay></video>
-        <!-- <img class="d-block w-100" src="..." alt="Third slide"> -->
-			</div>
-		  </div>
+        <div class="carousel-item active" id="slideOne">
+          <!-- <img class="d-block w-100" src="..." alt="First slide"> -->
+        </div>
+        <div class="carousel-item" id="slideTwo">
+          <!-- <img class="d-block w-100" src="..." alt="Second slide"> -->
+        </div>
+        <div class="carousel-item">
+          <video src="img/20191122_a_week_ago_1570573447418.mp4" class="embed-resposive-item w-100 img-fluid" muted loop autoplay></video>
+          <!-- <img class="d-block w-100" src="..." alt="Third slide"> -->
+        </div>
+      </div>
+      <a class="carousel-control-prev" href="#landingPageCarousel" role="button" data-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+      </a>
+      <a class="carousel-control-next" href="#landingPageCarousel" role="button" data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+      </a>      
 		</div>
 
 
