--- a/index.html
+++ b/index.html
@@ -19,16 +19,45 @@
     <!-- you need javascript ------------------------- -->
     <div id="landingPageCarousel" class="carousel slide" data-ride="carousel">
 		  <div class="carousel-inner">
-        <div class="carousel-item active" id="slideOne">
+        <div class="carousel-item active" id="slide1">
           <!-- <img class="d-block w-100" src="..." alt="First slide"> -->
+          <div class="carousel-caption d-none d-md-block">
+            <h5>MOBY deployment first image</h5>
+            <p>Two ship board cranes are required to deploy MOBY, as well as, a small boat.  Which is used to move the buoy away from the ship once it is in the water. </p>
+          </div>
         </div>
-        <div class="carousel-item" id="slideTwo">
+        <div class="carousel-item" id="slide2">
+          <div class="carousel-caption d-none d-md-block">
+            <h5>MOBY deployment second image</h5>
+            <p>As the buoy nears the water the small boat begins to pull on the top of the buoy. This helps keep the buoy from hitting the cradles as it is lowered into the water.</p>
+          </div>
           <!-- <img class="d-block w-100" src="..." alt="Second slide"> -->
         </div>
-        <div class="carousel-item">
-          <video src="img/20191122_a_week_ago_1570573447418.mp4" class="embed-resposive-item w-100 img-fluid" muted loop autoplay></video>
-          <!-- <img class="d-block w-100" src="..." alt="Third slide"> -->
+        <div class="carousel-item" id="slide3">
+          <div class="carousel-caption d-none d-md-block">
+            <h5>MOBY deployment third image</h5>
+            <p> Once the top is in the water the quick release is pulled so the buoy is no longer attached to the crane and the small boat pulls the buoy away.</p>
+          </div>
+          <!-- <img class="d-block w-100" src="..." alt="Second slide"> -->
         </div>
+        <div class="carousel-item" id="slide4">
+          <div class="carousel-caption d-none d-md-block">
+            <h5>MOBY deployment fourth image</h5>
+            <p>The second crane will be released once the top of the buoy is far enough out.</p>
+          </div>
+          <!-- <img class="d-block w-100" src="..." alt="Second slide"> -->
+        </div>
+        <div class="carousel-item" id="slide5">
+          <div class="carousel-caption d-none d-md-block">
+            <h5>MOBY deployment fifth image</h5>
+            <p>Both cranes are released and the small boat pulls the buoy away from the ship. </p>
+          </div>
+          <!-- <img class="d-block w-100" src="..." alt="Second slide"> -->
+        </div>
+        <!-- <div class="carousel-item">
+          <video src="img/20191122_a_week_ago_1570573447418.mp4" class="embed-resposive-item w-100 img-fluid" muted loop autoplay></video> -->
+          <!-- <img class="d-block w-100" src="..." alt="Third slide"> -->
+        <!-- </div> -->
       </div>
       <a class="carousel-control-prev" href="#landingPageCarousel" role="button" data-slide="prev">
         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
