--- a/index.html
+++ b/index.html
@@ -18,6 +18,13 @@
     <!-- CAROUSELL SECION ---------------------------------------------------- -->
     <!-- you need javascript ------------------------- -->
     <div id="landingPageCarousel" class="carousel slide" data-ride="carousel">
+      <ol class="carousel-indicators">
+        <li data-target="#landingPageCarousel" data-slide-to="0" class="active"></li>
+        <li data-target="#landingPageCarousel" data-slide-to="1"></li>
+        <li data-target="#landingPageCarousel" data-slide-to="2"></li>
+        <li data-target="#landingPageCarousel" data-slide-to="3"></li>
+        <li data-target="#landingPageCarousel" data-slide-to="4"></li>
+      </ol>
 		  <div class="carousel-inner">
         <div class="carousel-item active" id="slide1">
           <!-- <img class="d-block w-100" src="..." alt="First slide"> -->
